# blake-email-sender

./: README.md  app.py  pyproject.toml  requirements.txt
config/: prompt.txt
data/: synthetic_examples.csv
notebooks/: OpenAI_FineTuning_and_Completions.ipynb
src/: app.py  emails.py  gmail_manager.py  main.py  synthetic_data_generation.py
tests/: test_gmail_manager.py  test_synthetic_data.py
